--- a/jstyle.css
+++ b/jstyle.css
@@ -27,15 +27,15 @@ body {max-width: 100%;
          width: 98%;
          }
 .footer p{text-align: center;}
-.menu {display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-    }
+
 .menu ul{list-style: none;
          display:flex;
          justify-content: space-between;
         }
-
+.mlink {color: black;
+  text-decoration: none;
+  margin-right: 10px;
+}
 .cont {display: flex;
      flex-direction: row;
 	 justify-content: flex-start;
