--- a/jstyle.css
+++ b/jstyle.css
@@ -3,7 +3,8 @@
   }
   html, body{ height: 100%; display: flex; flex-direction: column;}
 
-
+.logo img {width: 50px
+}
 html {background-size:cover;
      font-size: 10pt;}
 body {max-width: 100%;
@@ -27,15 +28,15 @@ body {max-width: 100%;
          width: 98%;
          }
 .footer p{text-align: center;}
-
+.menu {display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
 .menu ul{list-style: none;
          display:flex;
          justify-content: space-between;
         }
-.mlink {color: black;
-  text-decoration: none;
-  margin-right: 10px;
-}
+
 .cont {display: flex;
      flex-direction: row;
 	 justify-content: flex-start;
